# embed-envoy-example

./: .bazelrc  .gitmodules  BUILD.bazel  README.md  WORKSPACE  main.cc
