load("@rules_cc//cc:defs.bzl", "cc_library")

load("@envoy//bazel:envoy_build_system.bzl", "envoy_cc_binary")

########################################################################

envoy_cc_binary(
    name = "embed-envoy",
    visibility = ["//visibility:public"],
    repository = "@envoy",
    srcs = ["main.cc"],
    deps = [
        "@envoy//source/exe:envoy_main_embed_lib",
    ],
)
